Use dvh instead of vh

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 #footer-container {
     display: flex;
     justify-content: center;
-    margin-bottom: 3vh;
+    margin-bottom: 3dvh;
 }
 
 .footer {
