--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -4,14 +4,14 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-top: 10vh;
+    padding-top: 10dvh;
 }
 
 .about-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 3vh;
+    margin-bottom: 3dvh;
 }
 
 .about-title {
@@ -29,7 +29,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 5vh;
+    margin-bottom: 5dvh;
 }
 
 .info {
