--- a/src/styles/Contacts.css
+++ b/src/styles/Contacts.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     color: rgb(245, 245, 220);
-    padding-top: 10vh;
-    margin-bottom: 15vh;
+    padding-top: 10dvh;
+    margin-bottom: 15dvh;
 }
 
 .contacts-container {
