--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,14 +1,14 @@
 #projects {
     display: block;
     color: white;
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-top: 10dvh;
+    padding-bottom: 10dvh;
 }
 
 .project-intro-title {
     font-size: 2rem;
     text-align: center;
-    margin-top: 15vh;
+    margin-top: 15dvh;
     margin-bottom: 50px;
 }
 
@@ -64,7 +64,7 @@
 
 @media screen and (max-width: 1200px){
     #projects {
-        padding-top: 1vh;
+        padding-top: 1dvh;
     }    
 
     .project-container {
