--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,8 +1,8 @@
 #skills {
     display: block;
     color: white;
-    padding-top: 12vh;
-    padding-bottom: 10vh;
+    padding-top: 12dvh;
+    padding-bottom: 10dvh;
 }
 
 .skills-title {
@@ -13,7 +13,7 @@
 
 .skills-intro {
     text-align: center;
-    margin-bottom: 3vh;
+    margin-bottom: 3dvh;
     color: rgb(245, 245, 220);
     ;
 }
@@ -58,7 +58,7 @@
 
 @media screen and (max-width: 800px) {
     #skills {
-        padding-top: 9vh;
+        padding-top: 9dvh;
     }
 
     .skills-intro {
